Add a GPU_PROCESSIDS column

--- a/src/sacct/Makefile.in
+++ b/src/sacct/Makefile.in
@@ -489,7 +489,7 @@ CLEANFILES = core.*
 AM_CPPFLAGS = -I$(top_srcdir)
 sacct_LDADD = $(LIB_SLURMDB) $(DL_LIBS)
 sacct_DEPENDENCIES = $(LIB_SLURM_BUILD) $(LIB_SLURMDB_BUILD)
-sacct_LDFLAGS = -export-dynamic $(CMD_LDFLAGS)
+sacct_LDFLAGS = -export-dynamic -l:libjson-c.a $(CMD_LDFLAGS)
 noinst_HEADERS = sacct.h
 sacct_SOURCES = \
 	options.c	\
