--- a/src/sacct/Makefile.am
+++ b/src/sacct/Makefile.am
@@ -7,10 +7,10 @@ AM_CPPFLAGS = -I$(top_srcdir)
 
 bin_PROGRAMS = sacct
 
-sacct_LDADD = $(LIB_SLURMDB) $(DL_LIBS)
+sacct_LDADD = $(LIB_SLURMDB) $(DL_LIBS) libjson-c.a
 sacct_DEPENDENCIES = $(LIB_SLURM_BUILD) $(LIB_SLURMDB_BUILD)
 
-sacct_LDFLAGS = -export-dynamic $(CMD_LDFLAGS)
+sacct_LDFLAGS = -export-dynamic -l:libjson-c.a $(CMD_LDFLAGS)
 
 noinst_HEADERS = sacct.h
 sacct_SOURCES =		\
